third_party/llvm-project/lld/test/MachO/invalid/Inputs/libincompatible.tbd
--- !tapi-tbd-v3
archs:            [ arm64 ]
uuids:            [ 'arm64: 00000000-0000-0000-0000-000000000000' ]
platform:         macosx
install-name:     '/usr/lib/libincompatible.dylib'
current-version:  0001.001.1
exports:
  - archs:        [ 'x86_64', 'arm64' ]
    symbols:      [ ]
...
